# NiForge

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  NiForgeTests[1]_include.cmake  NiForgeTests[1]_tests.cmake  cmake_install.cmake
src/: Defines.hpp  Reader.cpp  Reader.hpp
src/Blocks/: AbstractAdditionalGeometryData.hpp  NiAvObject.hpp  NiBillboardNode.hpp  NiBound.hpp  NiDataStream.hpp  NiDynamicEffect.hpp  NiFloatInterpolator.hpp  NiGeometry.hpp  NiInterpolator.hpp  NiKeyBasedInterpolator.hpp  NiMesh.hpp  NiNode.hpp  NiObject.hpp  NiObjectNet.hpp  NiPalette.hpp  NiPathInterpolator.hpp  NiPixelFormat.hpp  NiSkinInstance.hpp  NiSourceTexture.hpp  NiTexture.hpp  NiTransformInterpolator.hpp  NiTriBasedGeom.hpp  NiTriBasedGeomData.hpp  NiTriShape.hpp
src/Blocks/Controller/: NiFloatInterpController.hpp  NiInterpController.hpp  NiKeyframeController.hpp  NiMorphWeightsController.hpp  NiSingleInterpController.hpp  NiTextureTransformController.hpp  NiTimeController.hpp  NiTransformController.hpp
src/Blocks/Data/: NiBoolData.hpp  NiBooleanExtraData.hpp  NiExtraData.hpp  NiFloatData.hpp  NiFloatExtraData.hpp  NiGeometryData.hpp  NiIntegerExtraData.hpp  NiIntegersExtraData.hpp  NiKeyframeData.hpp  NiPixelData.hpp  NiPosData.hpp  NiStringExtraData.hpp  NiTransformData.hpp  NiTriBasedGeomData.hpp  NiTriShapeData.hpp
src/Blocks/DataStreamData/: DataStreamColor.hpp  DataStreamData.hpp  DataStreamIndex.hpp  DataStreamNormal.hpp  DataStreamPosition.hpp  DataStreamTexCoord.hpp
src/Blocks/Property/: NiAlphaProperty.hpp  NiMaterialProperty.hpp  NiProperty.hpp  NiSpecularProperty.hpp  NiStencilProperty.hpp  NiTexturingProperty.hpp  NiVertexColorProperty.hpp  NiZBufferProperty.hpp
src/Core/: NiFile.cpp  NiFile.hpp  NiHeader.hpp  NiVersion.hpp
src/Types/: Color3.hpp  Color4.hpp  Key.hpp  KeyGroup.hpp  MatchGroup.hpp  MaterialData.hpp  Matrix.hpp  MipMap.hpp  NiQuatTransform.hpp  QuatKey.hpp  Quaternion.hpp  Ref.hpp  ShaderTexDesc.hpp  TBC.hpp  TexCoord.hpp  TexDesc.hpp  Triangle.hpp  Vector3.hpp
tests/: test_parser.cpp
